fix: fixed modal and sidepanel header paddings according to initial gap

--- a/packages/modal/src/vars.css
+++ b/packages/modal/src/vars.css
@@ -43,5 +43,6 @@
     --modal-header-mobile-font-weight: 600;
 
     /* paddings */
-    --modal-header-mobile-paddings: var(--gap-4) var(--gap-8);
+    --modal-header-mobile-vertical-padding: var(--gap-4);
+    --modal-header-mobile-paddings: var(--modal-header-mobile-vertical-padding) var(--gap-8);
 }
