--- a/packages/side-panel/src/components/header/mobile.module.css
+++ b/packages/side-panel/src/components/header/mobile.module.css
@@ -5,7 +5,7 @@
     padding: var(--side-panel-header-mobile-paddings);
 
     @media (display-mode: standalone) {
-        padding-top: var(--sat);
+        padding-top: calc(var(--sat) + var(--side-panel-header-mobile-vertical-padding));
     }
 }
 
