--- a/packages/side-panel/src/vars.css
+++ b/packages/side-panel/src/vars.css
@@ -36,5 +36,6 @@
     --side-panel-header-mobile-font-weight: 600;
 
     /* paddings */
-    --side-panel-header-mobile-paddings: var(--gap-4) var(--gap-8);
+    --side-panel-header-mobile-vertical-padding: var(--gap-4);
+    --side-panel-header-mobile-paddings: var(--side-panel-header-mobile-vertical-padding) var(--gap-8);
 }
